--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ set(LIB_SRC
     src/log.cpp
     src/util.cpp
     src/config.cpp
+    src/thread.cpp
     )
 
 add_library(constantineQAQ SHARED ${LIB_SRC})
@@ -20,6 +21,13 @@ force_redefine_file_macro_for_sources(constantineQAQ) # __FILE__
 find_package(Boost REQUIRED)
 include_directories(${Boost_INCLUDE_DIRS})
 
+set(
+    LIB_LIB
+    constantineQAQ
+    pthread
+    yaml-cpp
+)
+
 #add_library(constantineQAQ SHARED ${LIB_SRC})
 #add_library(constantineQAQ_static STATIC ${LIB_SRC})
 #SET_TARGET_PROPERTIES(constantineQAQ_static PROPERTIES OUTPUT_NAME "constantineQAQ")
@@ -27,12 +35,17 @@ include_directories(${Boost_INCLUDE_DIRS})
 add_executable(test tests/test.cpp)
 add_dependencies(test constantineQAQ)
 force_redefine_file_macro_for_sources(test) # __FILE__
-target_link_libraries(test constantineQAQ yaml-cpp)
+target_link_libraries(test constantineQAQ ${LIB_LIB})
 
 add_executable(test_config tests/test_config.cpp)
 add_dependencies(test_config constantineQAQ)
 force_redefine_file_macro_for_sources(test_config) # __FILE__
-target_link_libraries(test_config constantineQAQ yaml-cpp)
+target_link_libraries(test_config constantineQAQ ${LIB_LIB})
+
+add_executable(test_thread tests/test_thread.cpp)
+add_dependencies(test_thread constantineQAQ)
+force_redefine_file_macro_for_sources(test_thread) # __FILE__
+target_link_libraries(test_thread constantineQAQ ${LIB_LIB})
 
 
 SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
