--- a/bin/conf/log.yml
+++ b/bin/conf/log.yml
@@ -8,7 +8,7 @@ logs:
       - type: StdoutLogAppender
   - name: system
     level: debug
-    formatter: '%d%T%m%n'
+    formatter: '%d%T%L%T%m%n'
     appenders:
       - type: FileLogAppender
         file: system.txt
